--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
 }
 h1{
     text-align: center;
+    margin-bottom: 30px;
 }
 .control{
     display: flex;
@@ -40,9 +41,35 @@ button{
     padding: 8px;
     border: 2px solid black;
     border-radius: 10px;
-    box-shadow: 5px 5px 10px black ;
 }
 button:hover{
     background-color:aqua;
-    color: black;
+    color: black; 
+    box-shadow: 5px 5px 10px rgb(29, 28, 28) ;
+}
+.note{
+    padding:  4px 10px;
+    margin-top: 10px;
+    border: 2px solid black;
+    border-radius: 8px;
+    background-color: white;
+}
+.edit-controls button{
+    padding: 5px;
+    font-weight: 500;
+    font-style: italic;
+    background-color: blue;
+    box-shadow: none;
+    cursor:pointer;
+}
+.edit-controls button:hover{
+   background-color: rgb(80, 80, 211);
+   color: white;
+   box-shadow: 5px 5px 10px rgb(109, 104, 104) ;
+}
+.timestamp{
+    color: blue;
+    font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
 }
